# ghi-ctx

./: pyproject.toml
.claude/docs/: processing-logic.md
.claude/skills/: ghi-ctx.md
src/ghi_ctx/: __init__.py  classifier.py  github.py  main.py
